# mt-aligner-prep-tool

./: .gitignore  README.md  pyproject.toml
src/mt_aligner_prep_tool/: config.py  download.py  merge_branch.py  pipeline.py  tm_checker.py  tokenizers.py  upload.py  utility.py
src/mt_aligner_prep_tool/script/: mt_aligner_prep.ipynb
tests/: test_tokenizer.py
