[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt_aligner_prep_tool"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "Tool to prepare data before sending to aligner."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "botok >= 0.8.12",
  "spacy >= 3.7.2",
  "boto3 >= 1.34.27",
  "PyGithub >= 2.3.0",
  "requests >= 2.31.0",
  "tqdm >= 4.66.2",
  "bo-sent-tokenizer @ git+https://github.com/OpenPecha/bo_sent_tokenizer.git"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
